<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#ffa500"
        android:fontFamily="@font/fromdamim"
        android:paddingLeft="30dp"
        android:text="@string/logo"
        android:textColor="@color/white"
        android:textSize="80dp"></TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="577dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/login_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_id"
            android:imeOptions="actionUnspecified"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/gradient" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_password"
            android:imeOptions="actionUnspecified"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/gradient" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#f05e23"
            android:text="@string/btn_login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#f05e23"
            android:text="@string/btn_register"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>