<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffa500"
        android:fontFamily="@font/fromdamim"
        android:gravity="center|left"
        android:paddingLeft="30dp"
        android:text="@string/logo"
        android:textColor="@color/white"
        android:textSize="30dp"></TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="511dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_register_bg"
            android:hint="이메일을 입력하세요"
            android:imeOptions="actionUnspecified"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/gradient" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_password"
            android:imeOptions="actionUnspecified"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/gradient" />

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_name"
            android:imeOptions="actionUnspecified"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/gradient" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/birday"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/input_register_bg"
                android:hint="생년월일을 입력하세요"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/gradient" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_register_bg"
            android:hint="전화번호를 입력하세요"
            android:imeOptions="actionUnspecified"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/gradient" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="남자" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="여자" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/gradient" />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#f05e23"
            android:text="@string/btn_register"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>